[tool.poetry]
name = "aircloak-examples"
version = "0.1.0"
description = "Examples of using aircloak-tools to access Aircloak."
authors = ["dlennon <3168260+dandanlen@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
aircloak-tools = "^0.2.0"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
