[tool.poetry]
name = "aircloak-examples"
version = "0.1.0"
description = "Examples of using aircloak-tools to access Aircloak."
authors = ["dddaan <3168260+dandanlen@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aircloak-tools = "^0.2.2"
pandas = "^1.1.4"
plotly-express = "^0.4.1"
nbformat = "^5.0.8"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
